# piezasxpress

./: .editorconfig  .gitattributes  .gitignore  README.md  manage.py  pyproject.toml  requirements-dev.txt
core/: admin.py  models.py  urls.py  views.py
core/static/core/scripts/: login-error-message.js  pass-visibility.js  preloader.js
core/static/core/styles/: general.css  header.css  home.css  login.css  media-queries.css  preloader.css
core/templates/core/: base.html  home.html  login.html  search.html
core/templates/core/components/: alert.html  page-title.html
orders/: admin.py  forms.py  models.py  urls.py  views.py
orders/static/orders/scripts/: order-type-select.js
orders/static/orders/styles/: no-results.css  quotation-bill.css  search-order.css
orders/templates/orders/: bill.html  no-results.html  quotation-form.html  quotation.html  search-order.html
piezasxpress/: asgi.py  settings.py  urls.py  wsgi.py
sales/: models.py  urls.py  views.py
sales/templates/sales/: index.html
scripts/: setup.sh
storage/: forms.py  urls.py  views.py
storage/static/storage/scripts/: add-order-parts.js  add-part.js
storage/static/storage/styles/: add-part.css  add.css  index.css  results.css  search.css
storage/templates/storage/: add-part.html  add.html  index.html  results.html  search-autopart.html  search-location.html  search-stock.html  search.html
