[project]
requires-python = '>=3.12'

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = 'single'
line-ending = 'lf'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'I', 'UP']

[tool.basedpyright]
typeCheckingMode = 'standard'
pythonVersion = '3.12'
deprecateTypingAliases = true
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportConstantRedefinition = true
reportUnnecessaryComparison = true
reportIgnoreCommentWithoutRule = true
